crates/telemetry-ams2/tests/snapshots/snapshot_tests__ams2_wet_conditions_frame.snap
---
source: crates/telemetry-ams2/tests/snapshot_tests.rs
expression: norm
---
speed_ms: 34.7
steering_angle: 0
throttle: 0
brake: 0
clutch: 0
rpm: 5500
max_rpm: 0
gear: 3
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0.2025
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: -0.38
ffb_torque_nm: 0
flags:
  yellow_flag: true
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: false
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: porsche_911_gt3_r
track_id: spa_francorchamps
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  brake:
    type: Float
    value: 0.1
  fuel_level:
    type: Float
    value: 65
  lap_count:
    type: Integer
    value: 3
  throttle:
    type: Float
    value: 0.55
sequence: 0
